# rust-solver

./: .gitignore  Cargo.toml  README.md  config.toml
algo_lib/: Cargo.toml
algo_lib/src/: lib.rs  list.rs
algo_lib/tests/: list.rs
main/: Cargo.toml
tasks/adding_words/: Cargo.toml
tasks/administrative_difficulties/: Cargo.toml  task.json
tasks/alphabet_spam/: Cargo.toml
tasks/awkward_party/: Cargo.toml
tasks/b_asicinterpreter/: Cargo.toml
tasks/binary_search_tree/: Cargo.toml
tasks/booking_aroom/: Cargo.toml
tasks/bus_numbers/: Cargo.toml
tasks/c_d/: Cargo.toml
tasks/candy_division/: Cargo.toml
tasks/competitive_arcade_basketball/: Cargo.toml
tasks/compound_words/: Cargo.toml
tasks/conformity/: Cargo.toml
tasks/conversation_log/: Cargo.toml
tasks/delimiter_soup/: Cargo.toml
tasks/doctor_kattis/: Cargo.toml  task.json
tasks/doctor_kattis/src/: tester.rs
tasks/esej/: Cargo.toml
tasks/free_food/: Cargo.toml
tasks/grandpa_bernie/: Cargo.toml
tasks/greeting_card/: Cargo.toml
tasks/integer_lists/: Cargo.toml
tasks/join_strings/: Cargo.toml
tasks/juggling_patterns/: Cargo.toml
tasks/kattis_s_quest/: Cargo.toml  task.json
tasks/knigs_of_the_forest/: Cargo.toml
tasks/numbers_on_atree/: Cargo.toml
tasks/quick_brown_fox/: Cargo.toml
tasks/recount/: Cargo.toml
tasks/saving_princess_peach/: Cargo.toml
tasks/shiritori/: Cargo.toml
tasks/sim/: Cargo.toml
tasks/srednji/: Cargo.toml  task.json
tasks/stock_prices/: Cargo.toml
tasks/teque/: Cargo.toml
templates/: Cargo.toml  main.rs  tester.rs
tester/: Cargo.toml
(+147 files in other folders)
