[workspace]
members = [
    "tasks/sim",
    "tasks/integer_lists",
    "tasks/join_strings",
    "tasks/delimiter_soup",
    "tasks/circuit_math",
    "tasks/bungee_builder",
    "tasks/game_of_throwns",
    "tasks/working_at_the_restaurant",
    "tasks/pairing_socks",
    "main",
    "algo_lib",
]
resolver = "2"
