[workspace]
members = [
    "tasks/shiritori",
    "tasks/greeting_card",
    "tasks/esej",
    "tasks/free_food",
    "tasks/bus_numbers",
    "tasks/booking_aroom",
    "tasks/saving_princess_peach",
    "tasks/quick_brown_fox",
    "tasks/alphabet_spam",
    "tasks/c_d",
    "tasks/stock_prices",
    "tasks/knigs_of_the_forest",
    "tasks/juggling_patterns",
    "tasks/numbers_on_atree",
    "tasks/teque",
    "tasks/sim",
    "tasks/integer_lists",
    "tasks/join_strings",
    "tasks/delimiter_soup",
    "tasks/circuit_math",
    "tasks/bungee_builder",
    "tasks/game_of_throwns",
    "tasks/working_at_the_restaurant",
    "tasks/pairing_socks",
    "main",
    "algo_lib",
]
resolver = "2"
