[package]
name = "doctor_kattis"
version = "0.1.0"
edition = "2024"

[dependencies]
algo_lib = { path = "../../algo_lib" }
tester = { path = "../../tester" }

[build-dependencies]
rust_competitive_helper_util = { git = "https://github.com/rust-competitive-helper/rust-competitive-helper" }

[features]
local = []
default = ["local"]
